Text controls: Intrinsic widths should not be smaller than averageCharWidth() * N

Text controls: Intrinsic widths should not be smaller than averageCharWidth() * N

https://bugs.webkit.org/show_bug.cgi?id=264897
rdar://problem/118727006

Reviewed by NOBODY (OOPS!).

This patch is to align WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://chromium.googlesource.com/chromium/src/+/a00094b9b640c10fff554af6dcb4a68d78300321

RenderTextControl::getAverageCharWidth(), which is the source of intrinsic
widths of INPUT/TEXTAREA calls for FontCascade::fastAverageCharWidthIfAvailable().
It should return a maximum value of 'avgCharWidth' and rounded 'avgCharWidth'.

* Source/WebCore/platform/graphics/FontCascade.cpp:
(FontCascade::fastAverageCharWidthIfAvailable):
* LayoutTests/fast/forms/textarea/textarea-cols-lucida-console.html: Add Test Case
* LayoutTests/fast/forms/textarea/textarea-cols-lucida-console-expected.txt: Add Test Case Expectation
* LayoutTests/fast/forms/text-control-intrinsic-widths.html: Updated
* LayoutTests/platform/ios/fast/forms/text-control-intrinsic-widths-expected.txt: Rebaselined
* LayoutTests/platform/ios/fast/forms/textarea-width-expected.txt: Ditto
* LayoutTests/platform/mac/fast/forms/textarea-width-expected.png: Ditto
* LayoutTests/platform/mac/fast/forms/textarea-width-expected.txt: Ditto
* LayoutTests/platform/mac-monterey/fast/forms/text-control-intrinsic-widths-expected.txt: Ditto
* LayoutTests/platform/mac-ventura/fast/forms/text-control-intrinsic-widths-expected.txt: Ditto
* LayoutTests/platform/mac/fast/forms/text-control-intrinsic-widths-expected.txt: Ditto